# axon

./: .gitignore  .gitmodules  README.md  common.mk  shell.nix
axon/: CMakeLists.txt  Kconfig  Makefile  overlay-dev.conf  overlay-nrf5.conf  overlay-prod.conf  overlay-rtt.conf  overlay-smp.conf  prj.conf
axon/boards/: axon_v0_2_nrf52840.overlay  axon_v1_3_0_nrf52840.overlay
axon/hyper_device/: CMakeLists.txt  Kconfig
axon/hyper_device/hyper-device-as-co2/: CMakeLists.txt  Kconfig  hyper_device_14_v3.gen.h  hyper_device_as_co2.c  hyper_device_as_co2.h
axon/hyper_device/hyper-device-as-flo/: CMakeLists.txt  Kconfig  hyper_device_20_v3.gen.h  hyper_device_as_flo.c  hyper_device_as_flo.h
axon/hyper_device/hyper-device-as-hum/: CMakeLists.txt  Kconfig  hyper_device_16_v3.gen.h  hyper_device_as_hum.c  hyper_device_as_hum.h
axon/hyper_device/hyper-device-axon/: CMakeLists.txt  hyper-device-class-11-axon_board_v1_0.V2.gen.h  hyper-device-class-12-axon_board_v1_3_0.V2.gen.h  hyper_device_11_v3.gen.h  hyper_device_12_v3.gen.h  hyper_device_axon.c  hyper_device_axon.h
axon/hyper_device/hyper-device-hydrokit/: CMakeLists.txt  Kconfig  hyper-device-class-13-hyper_hydrokit_v1_0_2.V2.gen.h  hyper_device_13_v3.gen.h  hyper_device_hydrokit.c  hyper_device_hydrokit.h
axon/hyper_device/hyper-device-mcu/: CMakeLists.txt  hyper_device_mcu.c  hyper_device_mcu.h
axon/hyper_device/hyper-device-powermeter/: CMakeLists.txt  Kconfig  hyper_device_18_v3.gen.h  hyper_device_powermeter.c  hyper_device_powermeter.h
axon/hyper_device/hyper-device-utils/: CMakeLists.txt  hyper_device_core_v3.c  hyper_device_core_v3.h  hyper_device_utils.c  hyper_device_utils.h
axon/src/: axon.c  axon.h  coap_client.c  coap_client.h  controller.c  controller.h  driver_utils.c  driver_utils.h  hyper_device_utils.c  hyper_device_utils.h  main.c  misc_utils.c  misc_utils.h  ot_utils.c  ot_utils.h  smp.c  smp.h  transport.c  transport.h
boards/arm/axon_v0_2_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  axon_v0_2_nrf52840.dts  axon_v0_2_nrf52840.yaml  axon_v0_2_nrf52840_defconfig
boards/arm/axon_v1_0_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  axon_v1_0_nrf52840.dts  axon_v1_0_nrf52840.yaml  axon_v1_0_nrf52840_defconfig
boards/arm/axon_v1_3_0_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  axon_v1_3_0_nrf52840.dts  axon_v1_3_0_nrf52840.yaml  axon_v1_3_0_nrf52840_defconfig  board.cmake
boards/arm/axon_v1_3_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  axon_v1_3_nrf52840.dts  axon_v1_3_nrf52840.yaml  axon_v1_3_nrf52840_defconfig
boards/arm/axon_v2_0_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  axon_v2_0_nrf52840.dts  axon_v2_0_nrf52840.yaml  axon_v2_0_nrf52840_defconfig  board.cmake
cmake/: add_git_submodule.cmake
coprocessor/: CMakeLists.txt  Makefile  overlay-leds.conf
coprocessor/boards/: axon_v2_0_nrf52840.overlay
coprocessor/src/: main.c
drivers/: CMakeLists.txt  Kconfig
drivers/mcp342x/: CMakeLists.txt  Kconfig  mcp342x.c  mcp342x.h
drivers/veml7700/: CMakeLists.txt  Kconfig  veml7700.c  veml7700.h
lib/: CMakeLists.txt  Kconfig
nix/: gitignore.nix
nix/hyper-pkgs/: default.nix
nix/hyper-pkgs/overlays/: gcc-arm-embedded-zephyr.nix  jlink.nix  nrfjprog.nix
overlays/: overlay-hyper-ot.conf  overlay-ot.conf
utils/: get_commit_hash.sh  nrfjprog_wrapper.sh
utils/hyper_extension_utils/: MCP342x.py  README.md  extension_eeprom_flashing_tool.py  extension_utils.py  hydrokit_factory_init.py  requirements.txt  shell.nix
utils/mcumgr/: Makefile
